website-common/css/styles.css
body {
    display: flex;
    flex-direction: column;
}

#app-header {
    display: flex;
    align-self: center;
    justify-content: space-between;
    gap: 10px;
    width: 100%;
    height: 5.5em;
    margin-bottom: 10px;
    margin-top: 10px;
    max-width: 768px;
}

.app-header-title {
    font-size: 125%;
    text-align: center;
}

#app-header .app-header-icon-area {
    display: flex;
    gap: 10px;
    margin-left: 10px;
}

#app-header .app-header-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#app-header .app-store-button a {
    display: block;
}

#app-header .app-header-icon {
    height: 100%;
    width: 5.5em;
}

#app-header .app-store-icon {
    height: 100%;
}
#app-header .app-header-languages {
    display: grid;
    grid-template-rows: repeat(3, calc(100%/3));
    grid-auto-flow: column;
    overflow-x: scroll;
    margin-right: 10px;
}
#app-header .app-header-languages .choose-language {
    display: inline-block;
    height: auto;
    width: inherit;
    height: fit-content;
    color: #ff7606;
    background-color: transparent;
    border: 1px solid gainsboro;
    border-radius: 10px;
    margin: 5px;
}

#app-header .app-header-languages .choose-language:disabled {
    color: white;
    background-color: #ff7606; 
}

#app.framework7-root {
    border: 3px solid black;
    border-radius: 10px;
    max-width: 768px;
    align-self: center;
}

